inclusao da paginação.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4727,10 +4727,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #e2284c;
   text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #ddd;
+ /* background-color: #fff;
+  border: 1px solid #ddd;*/
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
